# dimos

./: .dockerignore  .envrc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .style.yapf  AUTONOMY_STACK_README.md  CLA.md  FastSAM-s.pt.REMOVED.git-id  LICENSE  MUJOCO_LOG.TXT  NEWREADME.MD  README.md  RERUN_PR_ANALYSIS.md  builddev.sh  cuda_inject_deps.py  default.env  dev.sh  flake.nix  install.sh  mkdocs.yml  pyproject.toml  requirements.txt  run_docker.sh  run_go2.py  setup.py  test_command.py  test_livox_hw.py  test_subscribe.py  uv.lock.REMOVED.git-id
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/workflows/: _docker-build-template.yml  cleanup-runner.yml  cleanup.yml  code-cleanup.yml  docker.yml  pytest.yml  readme.md  tests.yml
assets/: agent_prompts.json  dimensional.command-center-extension-0.0.1.foxe  foxglove_g1_detections.json  foxglove_unitree_yolo.json  trimmed_video_office.mov  video-f30-480p.mp4.REMOVED.git-id
assets/agent/: memory.txt  prompt.txt
assets/foxglove_dashboards/: unitree.json
dimOS.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dimos/: conftest.py  constants.py  touch.py
dimos/agents/: REFACTOR_README.md  __init__.py  agent.py  agent_config.py  agent_ctransformers_gguf.py  agent_huggingface_local.py  agent_huggingface_remote.py  agent_message.py  agent_test_runner.py  agent_types.py  annotation.py  base.py  cerebras_agent.py  claude_agent.py  conftest.py  demo_agent.py  example_usage.py  planning_agent.py  refactored_cerebras_agent.py  refactored_claude_agent.py  system_prompt.py  test_agent.py  test_agent_image_message.py  test_agent_message_streams.py  test_agent_pool.py  test_agent_tools.py  test_agent_with_modules.py  test_base_agent_text.py  test_conversation_history.py  test_gateway.py  test_simple_agent_module.py  test_video_stream.py  testing.py  utils.py  vlm_agent.py  vlm_stream_tester.py
dimos/agents2/: agent.py  conftest.py  constants.py  ollama_agent.py  spec.py  test_agent.py  test_agent_direct.py  test_agent_fake.py  test_mock_agent.py  test_stash_agent.py  testing.py
dimos/agents_deprecated/: agent.py  agent_config.py  agent_message.py  claude_agent.py
dimos/control/: README.md  blueprints.py  components.py  coordinator.py  hardware_interface.py  task.py  test_control.py  tick_loop.py
dimos/core/: README_BLUEPRINTS.md  __init__.py  _test_future_annotations_helper.py  base_blueprints.py  blueprints.py  core.py  deployer_protocol.py  dimos.py  docker_build.py  docker_runner.py  global_config.py  module.py  module_coordinator.py  module_dask.py  native_module.py  o3dpickle.py  resource.py  rpc_client.py  shared_memory_transport.py  skill_module.py  state.py  stream.py  test_blueprints.py  test_core.py  test_modules.py  test_native_module.py  test_rpcstress.py  test_stream.py  test_worker.py  testing.py  transport.py  viz.py  worker.py  worker_manager.py
dimos/dashboard/: __init__.py  module.py  rerun.py  rerun_init.py  rerun_logger_module.py  rerun_module.py  runtime_constants.py  tf_rerun_module.py
dimos/data/: data_pipeline.py  depth.py  diffusion.py  labels.py  pointcloud.py  segment.py  videostream-data-pipeline.md
dimos/e2e_tests/: conftest.py  dimos_cli_call.py  lcm_spy.py  test_dimos_cli_e2e.py  test_manipulation_module.py  test_person_follow.py  test_simulation_module.py  test_spatial_memory.py
dimos/environment/: agent_environment.py  colmap_environment.py  environment.py
dimos/exceptions/: agent_memory_exceptions.py
dimos/hardware/: camera.py  end_effector.py  fake_zed_module.py  gstreamer_camera.py  gstreamer_camera_test_script.py  gstreamer_sender.py  interface.py  piper_arm.py  sensor.py  so101_arm.py  stereo_camera.py  stereo_mapper.py  test_webcam.py  ufactory.py  webcam.py  zed_camera.py
dimos/hardware/sensors/lidar/fastlio2/cpp/: CMakeLists.txt  README.md  cloud_filter.hpp  flake.nix  main.cpp  voxel_map.hpp
dimos/hardware/sensors/lidar/fastlio2/cpp/config/: mid360.json
dimos/hardware/sensors/lidar/livox/cpp/: CMakeLists.txt  README.md  flake.nix  main.cpp
dimos/manipulation/: __init__.py  depthai_test_pipeline.py  manip_aio_pipeline.py  manip_aio_pipeline_depthai.py  manip_aio_processer.py  manip_aio_processer_new_depthai.py  manip_aio_processer_new_test.py  manipulation_blueprints.py  manipulation_history.py  manipulation_interface.py  manipulation_module.py  test_manipulation_history.py  test_manipulation_module.py  test_manipulation_unit.py
dimos/map/: spec.py
dimos/mapping/: costmapper.py  spec.py  (+4 more)
docs/: README.md  ci.md  hooks.py  index.md  install_and_setup.md  modules.md  testing_stream_reply.md
examples/: camera_grayscale.py  rerun_click_test.py  rpc_calls.py  spatial_perception_example.py
installer/: Dockerfile  installer.pyz.REMOVED.git-id
ros_docker_integration/: README.md  ros_launch_wrapper.py  run_both.sh  run_command.sh  shell.sh  start.sh  start_clean.sh
scripts/: install.sh  run_inference.py  uninstall.sh
tests/: agent_manip_flow_fastapi_test.py  agent_manip_flow_flask_test.py  agent_manip_flow_test.py  agent_memory_test.py  colmap_test.py  manipulation_pipeline_demo.ipynb  motion_planner.py  pygazebo_test.py  run.py  run_go2_ros.py  run_navigation_only.py  run_robot_clean.py  run_webrtc.py  simple_agent_test.py  simple_test.py  test_agent.py  test_agent_ctransformers_gguf.py  test_agent_huggingface_local.py  test_agent_huggingface_local_jetson.py  test_agent_huggingface_remote.py  test_audio_agent.py  test_audio_robot_agent.py  test_cerebras_agent_query.py  test_cerebras_agent_skills.py  test_cerebras_unitree_ros.py  test_claude_agent_query.py  test_claude_agent_skills_query.py  test_command_pose_unitree.py  test_huggingface_llm_agent.py  test_ibvs.py  test_image_backends.py  test_manipulation_agent.py  test_manipulation_perception_pipeline.py.py  test_manipulation_pipeline_single_frame.py  test_manipulation_pipeline_single_frame_lcm.py  test_monitor_skill.py  test_move_vel_unitree.py  test_navigate_to_object_robot.py  test_navigation_skills.py  test_object_detection_agent_data_query_stream.py  (+46 more)
(+1381 files in other folders)
