[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dimos"
authors = [
    {name = "Stash Pomichter", email = "stash@dimensionalOS.com"},
]
version = "0.0.2"
description = "Powering agentive generalist robotics"

[project.optional-dependencies]
cuda = [
    "pycuda",
    "onnxruntime-gpu[cuda,cudnn]"
]

[tool.setuptools]
packages = ["dimos"]

[tool.ruff]
line-length = 100
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "libs",
    "external",
    "src"
]

[tool.pytest.ini_options]
testpaths = ["dimos"]
norecursedirs = ["dimos/robot/unitree/external"]
markers = [
    "vis: marks tests that run visuals and require a visual check by dev",
    "benchmark: benchmark, executes something multiple times, calculates avg, prints to console",
    "exclude: arbitrary exclusion from CI and default test exec",
    "tool: dev tooling",
    "needsdata: needs test data to be downloaded",
    "ros: depend on ros"]

addopts = "-v -ra --color=yes -m 'not vis and not benchmark and not exclude and not tool and not needsdata and not ros'"
